se corrige algunos items de la prueba de regresion(falta)

--- a/notebooks_limpieza/regresion.ipynb
+++ b/notebooks_limpieza/regresion.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#se correge las columnas de sexo y causa_defuncion\n",
+    "#se corrige las columnas de sexo y causa_defuncion\n",
     "#ya que estan como texto y no numericos hay una posibilidad de realizarlo con labelencoder y con one-hot(dummies)\n"
    ]
   },
